# rstatus

./: Cargo.toml  flake.nix  justfile
src/: main.rs
