[package]
name = "rstatus"
version = "1.0.0"
edition = "2021"
description = "A small rust status updater"
readme = "README.md"
repository = "https://github.com/JuliusKreutz/rstatus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
xcb = "1.2.2"
chrono = "0.4.31"
